Fixing second window alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -124,4 +124,8 @@ a {
   nav {
     padding: 0px 2dvw;
   }
+
+  .bodygrid {
+    flex-direction: column;
+  }
 }
